# syncspecng

./: .gitignore  README.md  main.py  pyproject.toml
examples/: example.md
specs/: CLI.md  CLI1.md  Combine Strings.md  Create Blocks.md  Create Directives.md  Defragment text.md  Design.md  Example coroutine.md  Fragment Text.md  Import Directive.md  Include directive.md  Index Fragments.md  Machine.md  Overview.md  Production.md  Reassemble Text.md  Source Directive.md  Traverse Path.md  Validate Context.md  test.md
specs/src/syncspec/: dummy.py  file_path.py  production.py  text.py
src/syncspec/: block.py  cli.py  combine_strings.py  combine_strings_context.py  context.py  create_blocks.py  create_directives.py  defragment_text.py  directive.py  example_coroutine.py  fragment.py  fragment_text.py  import_directive.py  include_directive.py  index_fragments.py  indexedfragment.py  input_dictionary_parameter.py  input_file_parameter.py  machine.py  output_dictionary_parameter.py  output_file_parameter.py  production.py  reassemble_text.py  source_directive.py  stop.py  traverse_path.py  utilities.py  validate_context.py
src/syncspec/examples/: parse_params.py
tests/: fragment_text.py  test_cli.py  test_combine_strings.py  test_create_blocks.py  test_create_directives.py  test_defragment_text.py  test_example_coroutine.py  test_import_directive.py  test_include_directive.py  test_index_fragments.py  test_reassemble_text.py  test_source_directive.py  test_traverse_path.py  test_validate_context.py
